# tp2

./: .txt  CMakeLists.txt  COLETOR-RECICLA.txt  Coletor.cpp  Coletor.h  Conta.cpp  Conta.h  Cuca.txt  DOADOR-PEDRO.txt  DOADOR-Pedro Lucas.txt  Doador.cpp  Doador.h  GerenciamentoDeArquivos.cpp  GerenciamentoDeArquivos.h  Liquido.cpp  Liquido.h  Makefile  Pedro Henrique 2.txt  Recolhedor.cpp  Recolhedor.h  Residuo.cpp  Residuo.h  Residuos.cpp  Residuos.h  Solido.cpp  Solido.h  asd.txt  contas.txt  main  main.cpp  pls.txt  teste.txt  teste2.txt  teste3.txt  teste4.txt
